fix Draggable and css scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,29 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 14px;
+  height: 12px;
+}
+::-webkit-scrollbar-thumb {
+  height: 6px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  background-color: #e2e2e2;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+}
+::-webkit-scrollbar-button {
+  display: none;
+  width: 0;
+  height: 0;
+}
+::-webkit-scrollbar-corner,
+::-webkit-scrollbar-track-piece {
+  background-color: transparent;
+}
 html {
   scroll-behavior: smooth;
 }
-
 body {
   font-family: "Rosario", sans-serif;
   font-style: normal;
@@ -16,6 +34,6 @@ body {
   background-color: #fcfcfc;
 }
 
-.drag {
-  cursor: grab;
-}
+@tailwind components;
+@tailwind utilities;
+
